--- a/app/views/slogan/index.html.erb
+++ b/app/views/slogan/index.html.erb
@@ -29,19 +29,16 @@
 	   	 <ul class="nav nav-pills nav-stacked">
 			<li><a href="/bulletin">全部文章</a></li>
 			<li><a href="/bulletin?q[article_type_eq]=true">最新消息</a></li>
-			<li><a href="/bulletin?q[article_type_eq]=false">網站改版</a></li>
+                        <li><a href="/bulletin?q[article_type_eq]=false">網站改版</a></li>
                         <li><a href="/slogan">首頁標語</a></li>
 	   	 </ul>
 	</div>
 
 	<div class ="col-sm-10">
 		<div class = "form-inline">
-	    	<%= form_for Bulletin.new , :url => { :controller => 'bulletin', :action => 'create' } do |f| %>
+	    	<%= form_for Slogan.new , :url => { :controller => 'slogan', :action => 'create' } do |f| %>
 	        <div class = "form-group">
-	            <%= f.select :article_type, [['最新消息', true], ['網站改版', false]], {}, {class: "form-control"} %>
-	        </div>
-	        <div class = "form-group">
-	            <strong>&nbsp;&nbsp;標題：&nbsp;</strong><%= f.text_area :title, class: "form-control", :rows => "1", :cols => "25", :placeholder => "超過此欄寬度首頁公告會跳行..." %>
+                  <strong>標語：&nbsp;</strong><%= f.text_area :description, class: "form-control", :rows => "2", :cols => "25" %>
 	        </div>
 	            <%= f.submit "直接刊登", class: "btn btn-warning", :data => { :confirm => "確定要刊登嗎？" }  %>
 	        <% end %>
@@ -49,22 +46,22 @@
 		<table class="table table-bordered table-striped">
 		      <thead>
 		        <tr>
-		          <th class="col_1">標題</th>
+		          <th class="col_1">標語</th>
 		          <th class="col_2">建立時間</th>
 		          <th class="col_3">修改時間</th>
 		          <th class="col_4"></th>
 		        </tr>
 		      </thead>
 		      <tbody>
-		          <% @bulletins.each do |t| %>
+		          <% @slogan.each do |t| %>
 		            <tr>
-		              <td class="col_1"><span class="glyphicon glyphicon-chevron-right"></span>&nbsp;&nbsp;<%= t.title %></td>
+		              <td class="col_1"><span class="glyphicon glyphicon-chevron-right"></span>&nbsp;&nbsp;<%= t.description %></td>
 		         	  <td class="col_2"><font color="gray" valign="bottom">
-						20<%= t.created_at.strftime("%y/%m/%d %H:%M") %><br><%= t.user.name %></font></td>
+						20<%= t.created_at.strftime("%y/%m/%d %H:%M") %></font></td>
 		              <td class="col_3"><font color="gray" valign="bottom">
-		              	20<%= t.updated_at.strftime("%y/%m/%d %H:%M") %><br><%= t.update_user %></font></td>
-		              <td class="col_4"><%= link_to "編輯", edit_bulletin_path(t) %>&nbsp;&nbsp;
-		              <%= link_to '刪除', bulletin_path(t), :method => :delete, :data => { :confirm => "確定要刪除此公布嗎？" } %></td>
+		              	20<%= t.updated_at.strftime("%y/%m/%d %H:%M") %></font></td>
+		              <td class="col_4"><%= link_to "編輯", edit_slogan_path(t) %>&nbsp;&nbsp;
+		              <%= link_to '刪除', slogan_path(t), :method => :delete, :data => { :confirm => "確定要刪除此標語嗎？" } %></td>
 		            </tr>
 		          <%end%>
 		      </tbody>
