--- a/app/views/discusses/main_form.html.erb
+++ b/app/views/discusses/main_form.html.erb
@@ -24,35 +24,51 @@
 				</div>
         <div class="form-group" style="margin-bottom: 0px;">
           <label class="col-sm-2 control-label">甜度</label>
-          <div class="col-sm-10" >
+          <div class="col-sm-10 rating-bar" >
             <fieldset id="sweet" class="rating">
-              <input type="radio" id="sweet_star5" name="discuss[sweet_degree]" value="5" /><label class = "full" for="sweet_star5" title="Awesome - 5 stars"></label>
-              <input type="radio" id="sweet_star4half" name="discuss[sweet_degree]" value="4.5" /><label class="half" for="sweet_star4half" title="Pretty good - 4.5 stars"></label>
-              <input type="radio" id="sweet_star4" name="discuss[sweet_degree]" value="4" /><label class = "full" for="sweet_star4" title="Pretty good - 4 stars"></label>
-              <input type="radio" id="sweet_star3half" name="discuss[sweet_degree]" value="3.5" /><label class="half" for="sweet_star3half" title="Meh - 3.5 stars"></label>
-              <input type="radio" id="sweet_star3" name="discuss[sweet_degree]" value="3" /><label class = "full" for="sweet_star3" title="Meh - 3 stars"></label>
-              <input type="radio" id="sweet_star2half" name="discuss[sweet_degree]" value="2.5" /><label class="half" for="sweet_star2half" title="Kinda bad - 2.5 stars"></label>
-              <input type="radio" id="sweet_star2" name="discuss[sweet_degree]" value="2" /><label class = "full" for="sweet_star2" title="Kinda bad - 2 stars"></label>
-              <input type="radio" id="sweet_star1half" name="discuss[sweet_degree]" value="1.5" /><label class="half" for="sweet_star1half" title="Meh - 1.5 stars"></label>
-              <input type="radio" id="sweet_star1" name="discuss[sweet_degree]" value="1" /><label class = "full" for="sweet_star1" title="Sucks big time - 1 star"></label>
-              <input type="radio" id="sweet_starhalf" name="discuss[sweet_degree]" value="0.5" /><label class="half" for="sweet_starhalf" title="Sucks big time - 0.5 stars"></label>
+              <input type="radio" id="sweet_star5" name="discuss[sweety_rating]" value="5" /><label class = "full" for="sweet_star5" title="Awesome - 5 stars"></label>
+              
+              <input type="radio" id="sweet_star4" name="discuss[sweety_rating]" value="4" /><label class = "full" for="sweet_star4" title="Pretty good - 4 stars"></label>
+              
+              <input type="radio" id="sweet_star3" name="discuss[sweety_rating]" value="3" /><label class = "full" for="sweet_star3" title="Meh - 3 stars"></label>
+              
+              <input type="radio" id="sweet_star2" name="discuss[sweety_rating]" value="2" /><label class = "full" for="sweet_star2" title="Kinda bad - 2 stars"></label>
+
+              <input type="radio" id="sweet_star1" name="discuss[sweety_rating]" value="1" /><label class = "full" for="sweet_star1" title="Sucks big time - 1 star"></label>
             </fieldset>
           </div>
         </div>
         <div class="form-group" style="margin-bottom: 0px;">
           <label class="col-sm-2 control-label">涼度</label>
-          <div class="col-sm-10" >
+          <div class="col-sm-10 rating-bar" >
             <fieldset id="cool" class="rating">
-              <input type="radio" id="star5" name="discuss[cold_degree]" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
-              <input type="radio" id="star4half" name="discuss[cold_degree]" value="4.5" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
-              <input type="radio" id="star4" name="discuss[cold_degree]" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
-              <input type="radio" id="star3half" name="discuss[cold_degree]" value="3.5" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
-              <input type="radio" id="star3" name="discuss[cold_degree]" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
-              <input type="radio" id="star2half" name="discuss[cold_degree]" value="2.5" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
-              <input type="radio" id="star2" name="discuss[cold_degree]" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
-              <input type="radio" id="star1half" name="discuss[cold_degree]" value="1.5" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
-              <input type="radio" id="star1" name="discuss[cold_degree]" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
-              <input type="radio" id="starhalf" name="discuss[cold_degree]" value="0.5" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+              <input type="radio" id="cold_star5" name="discuss[cold_rating]" value="5" /><label class = "full" for="cold_star5" title="Awesome - 5 stars"></label>
+              
+              <input type="radio" id="cold_star4" name="discuss[cold_rating]" value="4" /><label class = "full" for="cold_star4" title="Pretty good - 4 stars"></label>
+              
+              <input type="radio" id="cold_star3" name="discuss[cold_rating]" value="3" /><label class = "full" for="cold_star3" title="Meh - 3 stars"></label>
+              
+              <input type="radio" id="cold_star2" name="discuss[cold_rating]" value="2" /><label class = "full" for="cold_star2" title="Kinda bad - 2 stars"></label>
+              
+              <input type="radio" id="cold_star1" name="discuss[cold_rating]" value="1" /><label class = "full" for="cold_star1" title="Sucks big time - 1 star"></label>
+              
+            </fieldset>
+          </div>
+        </div>
+        <div class="form-group" style="margin-bottom: 0px;">
+          <label class="col-sm-2 control-label">深度</label>
+          <div class="col-sm-10 rating-bar" >
+            <fieldset id="hardness" class="rating">
+              <input type="radio" id="hardness_star5" name="discuss[hardness_rating]" value="5" /><label class = "full" for="hardness_star5" title="Awesome - 5 stars"></label>
+              
+              <input type="radio" id="hardness_star4" name="discuss[hardness_rating]" value="4" /><label class = "full" for="hardness_star4" title="Pretty good - 4 stars"></label>
+              
+              <input type="radio" id="hardness_star3" name="discuss[hardness_rating]" value="3" /><label class = "full" for="hardness_star3" title="Meh - 3 stars"></label>
+              
+              <input type="radio" id="hardness_star2" name="discuss[hardness_rating]" value="2" /><label class = "full" for="hardness_star2" title="Kinda bad - 2 stars"></label>
+              
+              <input type="radio" id="hardness_star1" name="discuss[hardness_rating]" value="1" /><label class = "full" for="hardness_star1" title="Sucks big time - 1 star"></label>
+              
             </fieldset>
           </div>
         </div>
