--- a/app/views/user/share.html.erb
+++ b/app/views/user/share.html.erb
@@ -1,5 +1,5 @@
 <% content_for :cus_fb_head do %>
-  <meta property="og:title" content="<%=@user.department.ch_name%> <%=@semester.name%>" ></meta>
+  <meta property="og:title" content="<%=@user.try(:department).try(:ch_name)%> <%=@semester.try(:name)%>" ></meta>
   <meta property="og:description" content="NCTU+分享課表" ></meta>
   <meta property="og:url" content="<%=root_url%>shares/<%=params[:id]%>" ></meta>
   <meta property="og:image" content="<%=root_url%>course_table_shares/<%=@file_name%>"/>
