use latest jquery-ui-rails gem

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,4 @@
-@import "jquery.ui.core"; // you always want that stylesheet
-@import "jquery.ui.theme";
-@import "jquery.ui.datepicker"; // import all the modules you need
+//= require jquery-ui
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
