remove unused gems
remove:

* google-api-client
* koala
* eventmachine
* em-resolv-replace

other changes:

* downgrade turbolinks version
* correct config bootstrap switch css(though not used)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,10 @@
 //= require jquery-ui
+//= require bootstrap3-switch
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bg-color";
 @import "book";
-@import "bootstrap-switch.min";
 @import "bootstrap-treeview";
 @import "course";
 @import "course_maps";
