Fix padding style issue & Add n+ books page in qna

--- a/app/views/newcomer/curricular.html.erb
+++ b/app/views/newcomer/curricular.html.erb
@@ -6,7 +6,7 @@
 
 	<div class="row important">
 		<div class="col-sm-12">
-			<h4>(註：社團資料陸續增加中！該欄空白代表該社團並未提供該項資料。此表並非所有社團，僅為有提供資料之社團)
+			<h4 style="padding: 0 20px 0 20px;">(註：社團資料陸續增加中！該欄空白代表該社團並未提供該項資料。此表並非所有社團，僅為有提供資料之社團)
 				<p>以上資料由各社團提供，並不代表學聯會立場</p>
 			</h4>
 		</div>
