--- a/app/views/newcomer/d2setup.html.erb
+++ b/app/views/newcomer/d2setup.html.erb
@@ -116,10 +116,10 @@
 			</div>
 		</div>
 		<div class="steps row reminder">
-			<p>感謝學長姐的努力及校方資訊技術服務中心的勞心管理，目前宿網並沒有流量限制！</p>
-			<p>對於這得來不易的自由，盼望大家謹慎使用網路資源，不破壞他人自由及網路安全！  不架設非教育性質的服務！</p>
-			<p>不超量下載大容量內容！</p>
-			<p>不超量下載大容量內容！</p>
+			<p>感謝學長姐的努力及校方資訊技術服務中心的勞心管理，目前宿網並沒有流量限制！<br/>
+			對於這得來不易的自由，盼望大家謹慎使用網路資源，不破壞他人自由及網路安全！  不架設非教育性質的服務！<br/>
+			不超量下載大容量內容！<br/>
+			不超量下載大容量內容！</p>
 		</div>
 	</section>
 </div>
