--- a/app/views/newcomer/qna.html.erb
+++ b/app/views/newcomer/qna.html.erb
@@ -79,7 +79,7 @@
         <i class="fa fa-chevron-down"></i>
     </div>  
     <ul class="submenu">    
-        <li><p>通常開學後班代會統一訂購系上課程的用書，如果想要用二手的可以向系上的學長姐詢問，或是到華通書局樓上的二手書寄賣區挑選。另外，交大也有<a href="https://www.facebook.com/groups/191505604299442/">「交大二手拍賣版」</a>等多種二手交易平台可以使用！</p></li>  
+	    <li><p>通常開學後班代會統一訂購系上課程的用書，如果想要用二手的可以向系上的學長姐詢問，或是到華通書局樓上的二手書寄賣區挑選。另外，交大也有<a href="https://plus.nctu.edu.tw/books/">「NCTU+ 二手書專區」</a>、<a href="https://www.facebook.com/groups/191505604299442/">「交大二手拍賣版」</a>等多種二手交易平台可以使用！</p></li>  
     </ul>
     </li>
     <li>  
@@ -96,7 +96,6 @@
 <h4>還有問題嗎？去新生提問平台發文吧，我們有專人為您解疑喔！</h4>
 <a href="https://stunion.nctu.edu.tw/question"><button class="btn-1">提問平台</button></a>
 </section>
-<div class="spacing"></div>
 
 <%= javascript_include_tag 'newcomer/qna' %>
 
