--- a/app/assets/stylesheets/newcomer/newcomer.scss
+++ b/app/assets/stylesheets/newcomer/newcomer.scss
@@ -1,6 +1,6 @@
 @import 'variables';
 @import 'mixins';
-@import "font-awesome-sprockets";
+//@import "font-awesome-sprockets";
 @import "font-awesome";
 @font-face {
   font-family: 'NotoSans';
@@ -376,7 +376,7 @@ a {
 }
 }
 .end-qna{
-    padding:80px 0 80px 0;
+    padding:80px 20px 80px 20px;
     text-align:center;
     background-color:#10608c;
 }
