Fix low-res map problem

--- a/app/assets/stylesheets/newcomer/newcomer-2.scss
+++ b/app/assets/stylesheets/newcomer/newcomer-2.scss
@@ -1,5 +1,5 @@
 @import 'variables';
-@import "font-awesome-sprockets";
+//@import "font-awesome-sprockets";
 @import "font-awesome";
 
 .glyphicon { margin-right:5px; }
