Fix newcomer main page banner bg-img error

--- a/app/assets/stylesheets/newcomer/newcomer.scss
+++ b/app/assets/stylesheets/newcomer/newcomer.scss
@@ -343,7 +343,7 @@ a {
     display:table;
     width:100%;
     height:100%;
-    background:image-url("background.jpg") no-repeat bottom center scroll;
+    background:image-url("newcomer/background.jpg") no-repeat bottom center scroll;
     background-size:cover;
     -webkit-background-size:cover;
     -moz-background-size:cover;
@@ -351,7 +351,7 @@ a {
     .cover-pic{
         height:100%;
         width:100%;
-        background:image-url("cover-pic.svg") no-repeat bottom center scroll;
+        background:image-url("newcomer/cover-pic.svg") no-repeat bottom center scroll;
         background-size:cover;
         -webkit-background-size:cover;
         -moz-background-size:cover;
