Add target:"_blank" to newcomer outgoing links

--- a/app/views/layouts/_newcomer_header.html.erb
+++ b/app/views/layouts/_newcomer_header.html.erb
@@ -40,7 +40,7 @@
 				</li> 
 				<li><%= link_to "D2帳號申請", newcomer_d2setup_path %></li> 
 				<li><%= link_to "選課教學", newcomer_chooseClass_path %></li> 
-				<li><%= link_to "NCTU+", root_path %></li>
+				<li><%= link_to "NCTU+", "https://plus.nctu.edu.tw/" , target: "_blank" %></li>
 				<li><%= link_to "學聯會", "https://stunion.nctu.edu.tw/blog/", target: "_blank" %></li>
 			</ul>
 		</div>
