--- a/app/views/newcomer/qna.html.erb
+++ b/app/views/newcomer/qna.html.erb
@@ -94,7 +94,7 @@
 </ul>
 <section class="end-qna">
 <h4>還有問題嗎？去新生提問平台發文吧，我們有專人為您解疑喔！</h4>
-<a href="https://stunion.nctu.edu.tw/question"><button class="btn-1">提問平台</button></a>
+<a href="https://stunion.nctu.edu.tw/question" target="_blank"><button class="btn-1">提問平台</button></a>
 </section>
 
 <%= javascript_include_tag 'newcomer/qna' %>
