--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -69,7 +69,7 @@
 					<a class="page-scroll" href="/events/" rel="nofollow" data-no-turbolink>活動吧</a>
 				</li>
 				<li>
-					<a class="page-scroll" href="/newcomer/" rel="nofollow">網路新生包</a>
+					<a class="page-scroll" href="/newcomer/" rel="nofollow" target="_blank">網路新生包</a>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
