--- a/app/views/newcomer/essentialShopping.html.erb
+++ b/app/views/newcomer/essentialShopping.html.erb
@@ -29,11 +29,11 @@
 	</div>
 </div>
 <div class="row seven-spacing banner-text">
-	<h3>訂購表單</h3>
-	<iframe class="form" src="https://zhirui1.typeform.com/to/cAhbbV">
-		<p>抱歉您的瀏覽器不支持iframe 欲訂購請點擊這個網址</p>
-		<p><a href="https://zhirui1.typeform.com/to/cAhbbV">https://zhirui1.typeform.com/to/cAhbbV</a></p>
-	</iframe>
+
+	<section class="buy-it-7-11">
+		<h2>小七精美用品預購</h2>
+		<a href="https://goo.gl/forms/o9i7CQhtBnyIjyUb2" target="_blank"><button class="btn-4">點我訂購</button></a>
+	</section>
 	<div class="row seven-spacing">
 		<div class="col-sm-10 col-sm-offset-1">
 			<h3>注意事項</h3>
@@ -48,5 +48,6 @@
 			</ul>
 		</div>
 	</div>
+</div>
 
 	<!-- source http://codepen.io/tuiaverde/pen/mngfi -->
