--- a/app/views/newcomer/shopping.html.erb
+++ b/app/views/newcomer/shopping.html.erb
@@ -128,11 +128,11 @@
         </div>
     </div>
 </div>
-<!-- Change the width and height values to suit you best -->
-<iframe class="form" src="https://zhirui1.typeform.com/to/prJKoM">
-    <p>抱歉您的瀏覽器不支持iframe 欲訂購請點擊這個網址</p>
-    <p><a href="https://zhirui1.typeform.com/to/prJKoM">https://zhirui1.typeform.com/to/prJKoM</a></p>
-</iframe>
+
+<section class="buy-it">
+	<h2>新生團購</h2>
+	<a href="https://goo.gl/forms/tAi1mlzuKOqJfACu1" target="_blank"><button class="btn-2">點我訂購</button></a>
+</section>
 
 <%= javascript_include_tag 'newcomer/shopping' %>
 
