Fix newcomer main page banner box style

--- a/app/assets/stylesheets/newcomer/newcomer.scss
+++ b/app/assets/stylesheets/newcomer/newcomer.scss
@@ -170,10 +170,10 @@ a {
         }
     }
     .text-box-2{
-        padding:5% 0 0 15%;
+        padding:5% 0 0 10%;
         h2{
-            padding:2.5rem 2.5rem 2.5rem 5rem;
-            margin:0 8% 0 8%;
+            padding:2.5rem 5rem 2.5rem 5rem;
+            margin:0 14% 0 5%;
             background-color:#10608c;
         }
     }
@@ -362,14 +362,16 @@ a {
     .text-box{
         padding:50% 0 0 0.1%;
         h2{
+            text-align: center;
             padding:2rem 2rem 2rem 2rem;
-            margin: 0 20% 0 2%;
+            margin: 0 2% 0 2%;
             background-color:#10608c;
         }
     }
     .text-box-2{
-        padding:5% 0 0 4%;
+        padding:5% 0 0 0.1%;
         h2{
+            text-align: center;
             padding:2.5rem 2rem 2.5rem 2rem;
             margin:5% 2% 0 2%;
             background-color:#10608c;
