--- a/app/views/newcomer/main.html.erb
+++ b/app/views/newcomer/main.html.erb
@@ -1,7 +1,7 @@
 <section id="banner">
 	<div class="cover-pic">
 		<div class="row">
-			<div class="col-sm-6 col-sm-offset-5">
+			<div class="col-md-6 col-md-offset-5 col-sm-8 col-sm-offset-3">
 				<div class="text-box"><h2>交大網路新生包</h2></div>
 				<div class="text-box-2"><h2>認識交大從這裡開始</h2></div>
 			</div>
