--- a/app/assets/stylesheets/newcomer/newcomer.scss
+++ b/app/assets/stylesheets/newcomer/newcomer.scss
@@ -126,7 +126,7 @@ a {
             }
         }
     }
-    @media(min-width:768px) {
+    @media(min-width:992px) {
         padding: 20px 0;
         border-bottom: none;
         letter-spacing: 1px;
@@ -396,3 +396,40 @@ a {
     background-color:#00d4a4;
 }
 
+
+@media (max-width: 992px) {
+	.navbar-header {
+		float: none;
+	}
+	.navbar-left,.navbar-right {
+		float: none !important;
+	}
+	.navbar-toggle {
+		display: block;
+	}
+	.navbar-collapse {
+		border-top: 1px solid transparent;
+		box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+	}
+	.navbar-fixed-top {
+		top: 0;
+		border-width: 0 0 1px;
+	}
+	.navbar-collapse.collapse {
+		display: none!important;
+	}
+	.navbar-nav {
+		float: none!important;
+		margin-top: 7.5px;
+	}
+	.navbar-nav>li {
+		float: none;
+	}
+	.navbar-nav>li>a {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	.collapse.in{
+		display:block !important;
+	}
+}
