Fix newcomer map image mobile js error

--- a/app/assets/javascripts/newcomer/newcomer.js.erb
+++ b/app/assets/javascripts/newcomer/newcomer.js.erb
@@ -36,6 +36,6 @@ $('.navbar-collapse ul li a').click(function() {
 
 $(function() {
     if( window.innerWidth <= 800){
-            document.getElementById("NCTUMAP").src="/assets/newcomer/map.jpg";
+            document.getElementById("NCTUMAP").src="<%= asset_path('newcomer/map.jpg') %>";
         }
 });
