--- a/app/views/layouts/newcomer.html.erb
+++ b/app/views/layouts/newcomer.html.erb
@@ -9,7 +9,8 @@
         <meta name="author" content="交通大學學聯會資訊部,NCTU+">
         <meta name="robots" content="index,follow">
         <meta property = "og:site_name" content="交通大學網路新生包">
-        <%#<meta property = "og:image" content = "assets/logo.png">%>
+        <%#<meta property = "og:image" content = "assets/fb-image.png">%>
+        <meta property = "og:image" content = "https://stunion.nctu.edu.tw/blog/wp-content/uploads/2016/08/fb-image.png">
         <meta property = "og:url" content="https://www.nctuplus.com">
         <meta property = "og:type" content="website">
         <meta property = "og:description" content="交大新生絕對不能錯過的網路新生包">
