--- a/app/views/newcomer/essentialShopping.html.erb
+++ b/app/views/newcomer/essentialShopping.html.erb
@@ -37,8 +37,9 @@
 	<div class="row seven-spacing">
 		<div class="col-sm-10 col-sm-offset-1">
 			<h3>注意事項</h3>
-			<ul>
+			<ul class="important-note">
 				<li>繳費期限：即日起至8/25（四）</li>
+				<li>匯款至交通大學郵局(銀行代碼700)</li>
 				<li>在繳費期限內將所需購買商品金額匯款或轉帳到 0061251-0158541 （交通大學學生聯合會廖宣堯）</li>
 				<li>繳費後請務必到以上的標單填寫帳號末5個號碼及繳費時間等購買相關資訊。</li>
 				<li>填寫完畢我們將會在2天內寄email與你確認資料。如未收到確認信請盡快聯絡我們</li>
