fix error info in curricular and aluminan

--- a/app/assets/stylesheets/newcomer/curricular.scss
+++ b/app/assets/stylesheets/newcomer/curricular.scss
@@ -136,3 +136,8 @@ span{
 .minor-3{
   background-color: #eeeeee!important;
 }
+.curricular-footer{
+    padding:80px 20px 80px 20px;
+    text-align:center;
+    background-color:#4121ab;
+}
