--- a/app/views/newcomer/studentAssociation.html.erb
+++ b/app/views/newcomer/studentAssociation.html.erb
@@ -11,3 +11,7 @@
 		</div>
 	</div>
 </section>
+<section class="curricular-footer">
+	<h2>查看完整系學會清單</h2>
+	<a href="http://activity.sa.nctu.edu.tw/?page_id=730" target="_blank"><button class="btn-5">課外活動組社團總覽</button></a>
+</section>
