--- a/app/views/newcomer/alumnian.html.erb
+++ b/app/views/newcomer/alumnian.html.erb
@@ -13,3 +13,7 @@
 		</div>
 	</div>
 </section>
+<section class="curricular-footer">
+	<h2>查看完整友會清單</h2>
+	<a href="http://activity.sa.nctu.edu.tw/?page_id=718" target="_blank"><button class="btn-5">課外活動組社團總覽</button></a>
+</section>
