--- a/app/views/newcomer/curricular.html.erb
+++ b/app/views/newcomer/curricular.html.erb
@@ -12,4 +12,8 @@
 		</div>
 	</div>
 </section>
+<section class="curricular-footer">
+	<h2>查看完整社團清單</h2>
+	<a href="http://activity.sa.nctu.edu.tw/?page_id=711" target="_blank"><button class="btn-5">課外活動組社團總覽</button></a>
+</section>
 
