--- a/app/views/newcomer/qna.html.erb
+++ b/app/views/newcomer/qna.html.erb
@@ -19,18 +19,7 @@
     </ul>
     </li>
     <li>  
-    <div class="link">Q2：請問交大kobe是誰？據說是電子系的… 然後還有obov…我也好像知道桶哥真面目
-        <i class="fa fa-chevron-down"></i>
-    </div>  
-    <ul class="submenu">    
-        <li>
-        <p>NCTULaoda，俗稱 交大kobe ， 身為交大人必然於網上目睹過他的風采，那華麗的文字與精闢的內容，實在是讓身為kobe迷的小編也看得如癡如醉絲絲入扣啊！然而，人稱樹大招風，NCTU老大必然於世間充滿者許多敵人，像是一直要不到球的隊友，或是看老大一直進球罵不了他的教練，所以即便是動用了舉國資源我們還是依然找不到他，實在是難以回答，但我們相信，行到水窮處一定可以坐看雲起時！只要有心哪怕是沒日沒夜地坐在餐廳等，有朝一日也一定可以瞥見老大的身影的！在這邊祝福你，如果找到了也請跟我們回報呦 >_^
-        </p>
-        </li>  
-    </ul>
-    </li>
-    <li>  
-    <div class="link">Q3：請問交大校地裡面哪一家銀行的提款機比較多?<br>要辦哪一家銀行，領錢時才比較不需要手續費呢？
+    <div class="link">Q2：請問交大校地裡面哪一家銀行的提款機比較多?<br>要辦哪一家銀行，領錢時才比較不需要手續費呢？
         <i class="fa fa-chevron-down"></i>
     </div>  
     <ul class="submenu">    
@@ -42,7 +31,7 @@
     </ul>
     </li>
     <li>  
-    <div class="link">Q4：請問前輩們建議住宿生自行準備床墊還是購買新生包裡的宣傳上的？<br>因為聽說尺寸不好找…
+    <div class="link">Q3：請問前輩們建議住宿生自行準備床墊還是購買新生包裡的宣傳上的？<br>因為聽說尺寸不好找…
         <i class="fa fa-chevron-down"></i>
     </div>  
     <ul class="submenu">    
@@ -50,7 +39,7 @@
     </ul>
     </li>
     <li>  
-    <div class="link">Q5：想請問大一不能申請的'機車停車證'? <br>另外除了不能進入環校機車道，還有甚麼限制嗎？
+    <div class="link">Q4：想請問大一不能申請的'機車停車證'? <br>另外除了不能進入環校機車道，還有甚麼限制嗎？
         <i class="fa fa-chevron-down"></i>
     </div>  
     <ul class="submenu">    
@@ -58,16 +47,16 @@
     </ul>
     </li>
     <li>  
-    <div class="link">Q6：校內的素食餐廳?
+    <div class="link">Q5：校內的素食餐廳?
         <i class="fa fa-chevron-down"></i>
     </div>  
     <ul class="submenu">    
-        <li><p>基本上學校餐廳中素食的選擇不是很多，如果是純素的話(不食用豬油)可能只有第二餐廳的二樓自助餐、Sunny義式廚房、7-11、全家可以選擇，或者是騎車、走路去外面吃。方便素的話，女二與二餐的自助餐基本上都能吃，不排斥的話二餐、女二都有滷味，清大也有素食餐廳。
+        <li><p>基本上學校餐廳中素食的選擇不是很多，如果是純素的話(不食用豬油)可能只有第二餐廳的二樓自助餐、7-11、全家可以選擇，或者是騎車、走路去外面吃。方便素的話，女二與二餐的自助餐基本上都能吃，不排斥的話二餐、女二都有滷味，清大也有素食餐廳。
 是說小編有個朋友吃素吃到後來乾脆開始吃麥當勞漢堡這種事也是有發生過的啾咪 >_^</p></li>  
     </ul>
     </li>
     <li>  
-    <div class="link">Q7：到時候選課的時候是可以跨校的嗎？
+    <div class="link">Q6：到時候選課的時候是可以跨校的嗎？
         <i class="fa fa-chevron-down"></i>
     </div>  
     <ul class="submenu">    
@@ -75,7 +64,7 @@
     </ul>
     </li>
     <li>  
-    <div class="link">Q8：請問大學用書都要自己買嗎?有沒有二手的?
+    <div class="link">Q7：請問大學用書都要自己買嗎?有沒有二手的?
         <i class="fa fa-chevron-down"></i>
     </div>  
     <ul class="submenu">    
@@ -83,7 +72,7 @@
     </ul>
     </li>
     <li>  
-    <div class="link">Q9：在宿舍裡需要帶多長的網路線才夠呢？<br>另外，學長姊都怎麼得到小冰箱的？是二手還是新買的呢？
+    <div class="link">Q8：在宿舍裡需要帶多長的網路線才夠呢？<br>另外，學長姊都怎麼得到小冰箱的？是二手還是新買的呢？
         <i class="fa fa-chevron-down"></i>
     </div>  
     <ul class="submenu">    
